--- a/www/public/index.html
+++ b/www/public/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
 
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
-	<title>SLIDY – simple, configurable & reusable carousel component built with SvelteJS</title>
+    <title>SLIDY - simple, configurable & reusable carousel action script built with TS & many tamplates</title>
 
-	<link rel="icon" type="image/png" href="favicon.png">
-	<link rel="stylesheet" type="text/css" href="norm.min.css">
-	<link rel="stylesheet" type="text/css" href="global.css">
-	<link rel="stylesheet" type="text/css" href="fonts/fonts.css">
-	<link rel="stylesheet" type="text/css" href="build/bundle.css">
+    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="stylesheet" type="text/css" href="norm.min.css">
+    <link rel="stylesheet" type="text/css" href="global.css">
+    <link rel="stylesheet" type="text/css" href="fonts/fonts.css">
+    <link rel="stylesheet" type="text/css" href="build/bundle.css">
 
-	<script defer src="build/bundle.js"></script>
+    <script defer src="build/bundle.js"></script>
 </head>
 
 <body>
