--- a/www/public/index.html
+++ b/www/public/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1.0, user-scalable=no"
+        />
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+        <title>
+            SLIDY - simple, configurable & reusable carousel action script built
+            with TS with tamplates
+        </title>
 
-    <title>SLIDY - simple, configurable & reusable carousel action script built with TS with tamplates</title>
+        <link rel="icon" type="image/png" href="favicon.png" />
+        <link rel="stylesheet" type="text/css" href="norm.min.css" />
+        <link rel="stylesheet" type="text/css" href="global.css" />
+        <link rel="stylesheet" type="text/css" href="fonts/fonts.css" />
+        <link rel="stylesheet" type="text/css" href="build/bundle.css" />
 
-    <link rel="icon" type="image/png" href="favicon.png">
-    <link rel="stylesheet" type="text/css" href="norm.min.css">
-    <link rel="stylesheet" type="text/css" href="global.css">
-    <link rel="stylesheet" type="text/css" href="fonts/fonts.css">
-    <link rel="stylesheet" type="text/css" href="build/bundle.css">
+        <script defer src="build/bundle.js"></script>
+    </head>
 
-    <script defer src="build/bundle.js"></script>
-</head>
-
-<body>
-</body>
-
+    <body></body>
 </html>
