remove undeed & commented code

--- a/packages/core/dev/index.html
+++ b/packages/core/dev/index.html
@@ -4,11 +4,11 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1" />
         <link rel="icon" type="image/png" href="favicon.png" />
-        <link rel="stylesheet" href="index.css" />
+        <link rel="stylesheet" href="dev.css" />
 
         <title>Slidy 3.0 - NativeJS</title>
 
-        <script defer src="index.js"></script>
+        <script defer src="dev.js"></script>
         <style>
             nav#dots {
                 gap: 0.5ex;
