--- a/packages/core/dev/index.html
+++ b/packages/core/dev/index.html
@@ -9,22 +9,25 @@
 
     <title>Slidy 3.0 - NativeJS</title>
 
-    <script defer src="slidy.js"></script>
+    <script defer src="dev.js"></script>
     <style></style>
 </head>
 
 <body>
     <fieldset>
         <legend>
-            <img alt="Slidy" width="50" height="50" src="favicon.png" />
+            <img alt="Slidy" width="50" height="50" src="favicon.png" style="vertical-align: bottom" />
             <h1>Slidy 3.0<sup>nativeJS</sup></h1>
-            <button id="dark" onclick="activate(this, dark)" style="position: absolute; right: 1em;">dark</button>
+            <button id="dark" onclick="activate(this, dark)"
+                style="position: absolute; right: 1em; top: 1rem">dark</button>
             <p id="stats" />
         </legend>
     </fieldset>
     <main>
         <section style="--gap: 1em; --flow: row; --width: auto" tabindex="0">
-            <ul id="slidy" />
+            <ul id="slidy">
+                <li>Loading...</li>
+            </ul>
         </section>
         <nav id="dots"></nav>
         <nav id="buttons">
@@ -112,17 +115,18 @@
 
             getPhotos(node, page, limit);
 
+            for (const button of buttons) {
+                if (options[button.id] || button.id === 'dark' && dark) button.classList.add('active')
+                // else if(button.id === 'dark' && dark) 
+            }
+            for (const input of inputs) {
+                if (input.name in options) input.value = options[input.name]
+                else if (input.name === 'width') input.value = getVar(section, '--width')
+                else if (input.name === 'gap') input.value = getVar(section, '--gap')
+            }
+
             node.addEventListener('mount', (e) => {
-                console.log(e, options)
-                for (const button of buttons) {
-                    if (options[button.id] || button.id === 'dark' && dark) button.classList.add('active')
-                    // else if(button.id === 'dark' && dark) 
-                }
-                for (const input of inputs) {
-                    if (input.name in options) input.value = options[input.name]
-                    else if (input.name === 'width') input.value = getVar(section, '--width')
-                    else if (input.name === 'gap') input.value = getVar(section, '--gap')
-                }
+                console.log(e, options, buttons, buttons['button#prev'], inputs)
             });
 
             node.addEventListener('move', (e) => {
@@ -132,8 +136,8 @@
 
             function scrolling(p) {
                 position = p;
-                stats.innerHTML = `index: [<b>${options.index
-                    }</b>], position: <b>${Math.trunc(position)}</b>px`;
+                stats.innerHTML = `[<b>${options.index
+                    }</b>] / <b>${Math.trunc(position)}</b>px`;
             }
 
             function indexing(x) {
@@ -151,33 +155,27 @@
             }
         };
 
-        function prev() {
-            slidy.to(options.index - 1);
-        }
-        function next() {
-            slidy.to(options.index + 1);
-        }
-        function goto(i) {
-            slidy.to(i);
-        }
         function randomQ(min, max) {
             return Math.floor(Math.random() * (max - min + 1)) + min;
         }
 
         function activate(node, prop) {
             node.classList.toggle('active');
-            if (event.target.id === 'dark') {
-                document.documentElement.setAttribute('scheme', !dark ? 'dark' : 'light')
-                dark = !dark
+            switch (event.target.id) {
+                case 'dark':
+                    document.documentElement.setAttribute('scheme', !dark ? 'dark' : 'light')
+                    dark = !dark
+                    break;
+                case 'vertical':
+                    setVar(section, 'flow', vertical ? 'column' : 'row')
+                    vertical = !vertical
+                    break;
+
+                default:
+                    break;
             }
             prop = !prop;
             return prop;
-            // for (const key in options) {
-            //     if (options[key] !== prop[key]) {
-            //         options[key] = prop[key]
-            //         return prop[key];
-            //     }
-            // }
         }
 
         function changeValue() {
@@ -209,6 +207,7 @@
                         .join('');
                 })
                 .then(() => {
+                    slidy?.destroy()
                     slidy = Slidy.slidy(node, options);
                 });
         }
