--- a/packages/core/dev/index.html
+++ b/packages/core/dev/index.html
@@ -10,7 +10,6 @@
     <title>Slidy 3.0 - NativeJS</title>
 
     <script defer src="dev.js"></script>
-    <style></style>
 </head>
 
 <body>
@@ -18,15 +17,16 @@
         <legend>
             <img alt="Slidy" width="50" height="50" src="favicon.png" style="vertical-align: bottom" />
             <h1>Slidy 3.0<sup>nativeJS</sup></h1>
-            <button id="dark" onclick="activate(this, dark)"
-                style="position: absolute; right: 1em; top: 1rem">dark</button>
+            <button id="dark" onclick="activate(this, dark)" style="position: absolute; right: 1em; top: 1rem">
+                dark
+            </button>
             <p id="stats" />
         </legend>
     </fieldset>
     <main>
         <section style="--gap: 1em; --flow: row; --width: auto" tabindex="0">
             <ul id="slidy">
-                <li>Loading...</li>
+                <li style="display: grid; place-items: center">Loading...</li>
             </ul>
         </section>
         <nav id="dots"></nav>
@@ -91,7 +91,7 @@
             slidy = null,
             dark = window.matchMedia('(prefers-color-scheme: dark)').matches,
             page = randomQ(1, 69),
-            limit = 9
+            limit = 9;
 
         let options = {
             index: 4,
@@ -109,24 +109,25 @@
             nav = document.querySelector('#dots'),
             stats = document.querySelector('#stats'),
             buttons = document.querySelectorAll('button'),
-            inputs = document.querySelectorAll('input')
+            inputs = document.querySelectorAll('input');
 
         window.onload = () => {
 
             getPhotos(node, page, limit);
 
             for (const button of buttons) {
-                if (options[button.id] || button.id === 'dark' && dark) button.classList.add('active')
-                // else if(button.id === 'dark' && dark) 
+                if (options[button.id] || (button.id === 'dark' && dark))
+                    button.classList.add('active');
             }
             for (const input of inputs) {
-                if (input.name in options) input.value = options[input.name]
-                else if (input.name === 'width') input.value = getVar(section, '--width')
-                else if (input.name === 'gap') input.value = getVar(section, '--gap')
+                if (input.name in options) input.value = options[input.name];
+                else if (input.name === 'width')
+                    input.value = getVar(section, '--width');
+                else if (input.name === 'gap') input.value = getVar(section, '--gap');
             }
 
             node.addEventListener('mount', (e) => {
-                console.log(e, options, buttons, buttons['button#prev'], inputs)
+                console.log(e, options, buttons, inputs);
             });
 
             node.addEventListener('move', (e) => {
@@ -134,10 +135,19 @@
                 scrolling(e.detail.position);
             });
 
+            node.addEventListener('resize', (e) => {
+                // console.log(e)
+            });
+
+            node.addEventListener('update', (e) => {
+                // console.log(e)
+            });
+
             function scrolling(p) {
                 position = p;
-                stats.innerHTML = `[<b>${options.index
-                    }</b>] / <b>${Math.trunc(position)}</b>px`;
+                stats.innerHTML = `[<b>${options.index}</b>] / <b>${Math.trunc(
+                    position
+                )}</b>px`;
             }
 
             function indexing(x) {
@@ -163,12 +173,15 @@
             node.classList.toggle('active');
             switch (event.target.id) {
                 case 'dark':
-                    document.documentElement.setAttribute('scheme', !dark ? 'dark' : 'light')
-                    dark = !dark
+                    document.documentElement.setAttribute(
+                        'scheme',
+                        !dark ? 'dark' : 'light'
+                    );
+                    dark = !dark;
                     break;
                 case 'vertical':
-                    setVar(section, 'flow', vertical ? 'column' : 'row')
-                    vertical = !vertical
+                    setVar(section, 'flow', vertical ? 'column' : 'row');
+                    vertical = !vertical;
                     break;
 
                 default:
@@ -179,7 +192,7 @@
         }
 
         function changeValue() {
-            options[event.target.name] = event.target.value
+            options[event.target.name] = event.target.value;
         }
         function getVar(node, name) {
             return getComputedStyle(node).getPropertyValue(name);
@@ -189,15 +202,15 @@
         }
 
         async function getPhotos(node, page, limit) {
+            node.innerHTML = `<li style="display: grid; place-items: center">Loading...</li>`;
             fetch(`https://picsum.photos/v2/list?limit=${limit}&page=${page}`)
                 .then(async (res) => {
                     const photos = await res.json();
                     node.innerHTML = photos
                         .map(
                             (d, i) =>
-                                `<li><img src="${d.download_url
-                                }" width="${d.width / 5}" height="${d.height / 5
-                                }" alt="${i}"/></li>`
+                                `<li><img src="${d.download_url}" width="${d.width / 5
+                                }" height="${d.height / 5}" alt="${i}"/></li>`
                         )
                         .join('');
                     nav.innerHTML = photos
@@ -207,7 +220,7 @@
                         .join('');
                 })
                 .then(() => {
-                    slidy?.destroy()
+                    slidy?.destroy();
                     slidy = Slidy.slidy(node, options);
                 });
         }
