--- a/packages/core/dev/index.html
+++ b/packages/core/dev/index.html
@@ -192,7 +192,8 @@
         }
 
         function changeValue() {
-            options[event.target.name] = event.target.value;
+            slidy.update({ [event.target.name]: +event.target.value })
+            options[event.target.name] = +event.target.value;
         }
         function getVar(node, name) {
             return getComputedStyle(node).getPropertyValue(name);
