--- a/packages/svelte/dev/public/index.html
+++ b/packages/svelte/dev/public/index.html
@@ -8,6 +8,7 @@
     <meta http-equiv="Expires" content="0" />
     <link rel="icon" type="image/png" href="assets/logo.png" />
     <link rel="icon" href="assets/logo.svg" type="image/svg+xml" />
+    <link rel="stylesheet" href="tokens.css" />
     <link rel="stylesheet" href="global.css" />
     <link rel="stylesheet" href="build/bundle.css" />
     <title>Slidy</title>
